--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,18 @@
     animation: slideInFromLeft 0.5s 2s forwards;
   }
 }
+/*Footer*/
+@media (min-width: 1400px) {
+  #footer-contact {
+    display: none;
+  }
+  .footer_btn-large-container {
+    display: flex;
+    width: auto;
+    margin-left: auto;
+  }
+}
+/*Selection*/
+body::selection {
+  background-color: #cac9e6;
+}
